# lumina

./: .dir-locals.el  .env  .envrc  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.org  TODO.org  build.rs  cargo-sources.json  clippy.toml  default.nix  dev.chriscochrun.Lumina.yml  flake.nix  guix.scm  justfile  readme.org  rust-analyzer.toml  rustfmt.toml  shell.nix  test.db  test.db-shm  test.db-wal  test_presentation.lisp  test_presentation.ron  test_slides.lisp  test_song.lisp  testypres.lisp  todo.org  xyz.cochrun.lumina.yml
.config/: nextest.toml
.forgejo/workflows/: demo.yaml  lints.yaml  test.yaml
.sqlx/: query-7ace613c138f874198ea8e5f72697d4c604fe7b755fdcb6773692c813b5e1d4b.json  query-8cc171f2be70148e4178fa23d34887be69527e6fda128b11a6279cd8cf410918.json  query-aa01b675a8e40d152144b3b6a11ec9c68244defd5ea85764979535e1b2267496.json  query-d4b324ece51b3a314367f570bb7f28a36ef703387d3f9eace9f51f102b1ed6da.json  query-f6c1c41a68b04f939301d6bb897cf79915ef389eedb009daef3be737709266f8.json
benches/: lumina_bench.rs
docs/: main.org
migrations/: 20241112030535_initial.sql  20241112120121_alter_columns.sql  20250925190420_Remove_the_page_count_column_in_presentations_table.sql  20251020184333_add_starting_index_and_ending_index_to_presentations_table.sql  20260211174933_add_stroke_and_shadow.sql  20260217193356_add_text_weight_and_style.sql  20260422171528_add_videos_to_songs.sql  20260527180153_access_time.sql
res/: xyz.cochrun.lumina.desktop  xyz.cochrun.lumina.lumina.desktop  xyz.cochrun.lumina.lumina.metainfo.xml  xyz.cochrun.lumina.metainfo.xml
res/icons/: lumina.icns
src/: CMakeLists.txt  lisp.rs  main.cpp  main.rs  resources.qrc
src/core/: animation.rs  content.rs  file.rs  images.rs  kinds.rs  lisp.rs  mod.rs  model.rs  presentations.rs  service_items.rs  settings.rs  slide.rs  slide_actions.rs  song_search.rs  songs.rs  thumbnail.rs  videos.rs  ytdl.rs
src/cpp/: presentationsqlmodel.cpp  serviceitemmodel.cpp  serviceitemmodel.h  slidehelper.cpp  slidehelper.h  slidemodel.cpp  slidemodel.h  songsqlmodel.cpp
src/cpp/mpv/: mpvobject.cpp
src/emacs/: lumina.el
src/qml/: main.qml
src/qml/presenter/: DragHandle.qml  Header.qml  ImageEditor.qml  Library.qml  LibraryItem.qml  LoadingSpinner.qml  MainWindow.qml  NewVideo.qml  Presentation.qml  PresentationEditor.qml  PresentationWindow.qml  PreviewSlide.qml  PreviewSlideListDelegate.qml  ServiceList.qml  Settings.qml  Slide.qml  SlideEditor.qml  SlidesListView.qml  SongEditor.qml  SongEditorSlideList.qml  TextBackground.qml  TextBox.qml  VideoEditor.qml  qmldir  reveal.js
src/rust/: ffmpeg.rs  file_helper.rs  image_model.rs  lib.rs  models.rs  obs.rs  presentation_model.rs  reveal_js.rs  schema.rs  service_item_model.rs  service_thing.rs  settings.rs  slide_model.rs  slide_model_r.rs  slide_obj.rs  slide_object.rs  song_model.rs  utils.rs  video_model.rs  ytdl.rs
src/rust/migrations/2023-04-04-164359_library-db/: down.sql  up.sql
src/rust/slides/: mod.rs  slide.rs
src/rust/songs/: mod.rs  song.rs  song_editor.rs  song_lyrics.rs  song_model.rs
src/test/: test_service_item_model.qml
src/ui/: double_ended_slider.rs  editor.rs  gst_video.rs  image_editor.rs  image_loader.rs  library.rs  mod.rs  pdf.rs  presentation_editor.rs  presenter.rs  scroll_operations.rs  service.rs  slide_editor.rs  slide_preview.rs  song_editor.rs  text_svg.rs  video.rs  video_editor.rs
src/ui/widgets/: context_popover.rs  loaded_image.rs  mod.rs  slide.rs  slide_text.rs  verse_editor.rs
src/ui/widgets/draggable/: column.rs  flex_row.rs  mod.rs  row.rs
src/ui/widgets/icon/: handle.rs  mod.rs  named.rs
